= Version descriptions

== master

- Main view: the sleep list now has a scrollbar

== 5.0

- Resolves: gh#2 Allow the user to manually edit an entry

== 4.0

- App metadata now features a screenshot
- Added an about dialog to credit used libraries
- Now never performing database operations on the main thread
- Resolves: gh#1 Cannot import csv after export

== 3.0

- Can remember already started (but not yet stopped) sleeps on system restart
- Can show duration of each past sleep
- Can delete past recorded sleeps selectively

== 2.0

- Can import previously exported data
- Notification icon is now in sync with the launcher icon
- Runtime baseline is now only API 22 (Android 5.1), not API 26 to cover about 80% of devices

== 1.0

- Initial release
- Can store past sleeps
- Can count average duration of them